--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,10 @@ authors = [
     {name = "Ibai Gorordo"}
 ]
 dependencies = [
-    "onnxruntime",
     "opencv-python",
+    {version = "onnxruntime==1.18.0", markers = "sys_platform == 'darwin' and platform_machine != 'arm64'"},
+    {version = "onnxruntime-silicon==1.16.3", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"},
+    {version = "onnxruntime-gpu==1.18.0", markers = "sys_platform != 'darwin'"}
 ]
 
 [tool.setuptools.packages.find]
